# siemens-ad-haskell-training-2022

./: .gitignore  README.md  flake.nix  haskell-training.cabal  shell.nix
demo-service-exe/: Main.hs
demo-service-lib/Anomaly/Demo/: Domain.hs  Main.hs  Server.hs  SqliteDB.hs  Store.hs
demo-service-lib/Anomaly/Demo/Server/: API.hs
siemens-flake/: Dockerfile  a.out  flake.nix  hello-siemens.nix  result  result-man
siemens-flake/src/: main.c
src-exe/: Main.hs
src-lib/: BiancaLib.hs  JohannesLib.hs  MikeLib.hs  NewFile.hs  StoreServer.hs
