cabal-version:      3.0
name:               haskell-training
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Johannes Maier
maintainer:         johannes.maier@active-group.de
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src-lib
    default-language: Haskell2010

executable haskell-training
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , haskell-training
    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite haskell-training-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , haskell-training
