cabal-version:      3.0
name:               haskell-training
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Johannes Maier
maintainer:         johannes.maier@active-group.de
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
                    , QuickCheck
                    , containers
                    , polysemy
                    , polysemy-plugin
                    , text
    hs-source-dirs:   src-lib
    default-language: Haskell2010

executable haskell-training
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , haskell-training
    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite haskell-training-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , HUnit-approx
                    , QuickCheck
                    , generic-arbitrary
                    , haskell-training
                    , hspec
                    , quickcheck-instances
                    , text


-- Demo Service
common options
  default-language: Haskell2010
  ghc-options:      -Werror=incomplete-patterns
                    -Werror=missing-fields
                    -Wunused-packages

common polysemy
  build-depends:   polysemy
                 , polysemy-plugin
  ghc-options:     -flate-specialise
                   -fplugin=Polysemy.Plugin
                   -fspecialise-aggressively

library demo-service-lib
  import:           options
                  , polysemy
                  , warnings
  hs-source-dirs:   demo-service-lib
  build-depends:    base
                  , aeson
                  , containers
                  , mtl
                  , polysemy
                  , polysemy-plugin
                  , servant
                  , servant-server
                  , sqlite-simple
                  , text
                  , warp
  exposed-modules:  Anomaly.Demo.Domain
                  , Anomaly.Demo.Server
                  , Anomaly.Demo.Server.API
                  , Anomaly.Demo.SqliteDB
                  , Anomaly.Demo.Store

executable demo-service
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , demo-service-lib
    hs-source-dirs:   demo-service-exe
    default-language: Haskell2010
